<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".datosUsuario">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <EditText
        android:id="@+id/txt_nombreUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#CCC8BA"
        android:ems="10"
        android:hint="@string/Nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/lv_datosUsuarios"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/txt_apellidoUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreUsuario"
        tools:layout_editor_absoluteX="-49dp" />

    <EditText
        android:id="@+id/txt_correoUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#CCC8BA"
        android:ems="10"
        android:hint="@string/Correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidoUsuario"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/txt_passUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:background="#CCC8BA"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_correoUsuario"
        tools:layout_editor_absoluteX="28dp" />




    <EditText
        android:id="@+id/txt_telefonoUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_passUsuario"
        tools:layout_editor_absoluteX="-16dp" />


    <EditText
        android:id="@+id/txt_direccionUsuarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Direccion"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefonoUsuario"
        tools:layout_editor_absoluteX="-1dp" />


    <Button
        android:id="@+id/btnModificarUsuario"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/modificar_mis_datos"
        android:onClick="modificarDatosUsuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


</LinearLayout>