<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c9e265"
    tools:context=".Usuarios">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <EditText
        android:id="@+id/txt_nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#CCC8BA"
        android:ems="10"
        android:hint="@string/Nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/lv_datosUsuarios"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/txt_apellidoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombreUsuario"
        tools:layout_editor_absoluteX="-49dp" />


    <ListView
        android:id="@+id/lv_datosUsuarios"
        android:layout_width="414dp"
        android:layout_height="103dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        android:background="#C0E265"
        tools:layout_editor_absoluteX="0dp">

    </ListView>


                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txt_correoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#CCC8BA"
        android:ems="10"
        android:hint="@string/Correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidoUsuario"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/txt_passUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:background="#CCC8BA"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_correoUsuario"
        tools:layout_editor_absoluteX="28dp" />




                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txt_telefonoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_passUsuario"
        tools:layout_editor_absoluteX="-16dp" />


                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txt_direccionUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Direccion"
        android:background="#CCC8BA"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefonoUsuario"
        tools:layout_editor_absoluteX="-1dp" />


    <Spinner
        android:id="@+id/sptipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#AFACA2"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_direccionUsuario"
        tools:layout_editor_absoluteX="0dp"></Spinner>

    <Spinner
        android:id="@+id/spHogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#AFACA2"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/sptipo"
        tools:layout_editor_absoluteX="-16dp"></Spinner>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="414dp"
        android:layout_height="39dp"
        android:layout_margin="0dp"
        android:background="#c9e265"
        android:text="Lista de usuarios"
        android:textAlignment="center"
        android:textColor="#030000"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />






</android.support.constraint.ConstraintLayout>
