<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c9e265"
    android:orientation="vertical"
    tools:context=".ingresarEvento">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/llRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/llLeft"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_listaEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/eventos"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    >

                    <ListView
                        android:id="@+id/lv_eventos"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp">

                    </ListView>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/txt_comentarioEvento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Comentario"
                    android:inputType="textMultiLine"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp" />

            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp">

                    <EditText
                        android:id="@+id/txt_fechaEvento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Fecha"
                        android:inputType="date"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp" />

                </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">
            </Spinner>

            <Button
                android:id="@+id/btnEventos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_evento"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLeft"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@id/llLeft"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_comentarioEventoSeleccionado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_tipoEventoSeleccionado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:textSize="15sp"
                    android:paddingRight="15dp"
                    android:layout_gravity="center"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_usuarioEventoSeleccionado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:layout_gravity="center"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_fechaEventoSeleccionado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:layout_gravity="center"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnAsistir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participar"
                android:onClick="participar"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <ListView
                android:id="@+id/lv_asistentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>




        </LinearLayout>
    </RelativeLayout>
</LinearLayout>